fir3/fir3/logs/hls_run_csim_9196.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir3 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir.h' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir.cpp' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir_test.cpp' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file '/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir_test.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=fir' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'flow_target=vitis' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vitis'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_latency=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_alignment_byte_size=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_max_widen_bitwidth=512
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_rtl -register_reset_num=3
INFO: [HLS 200-1465] Applying ini 'part=xczu48dr-ffvg1517-2-e' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu48dr-ffvg1517-2-e'
INFO: [HLS 200-1465] Applying ini 'clock=5' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'package.output.format=xo' from /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [HLS 211-200] Compiling source code /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir_test.cpp as test bench code with instrumentation
/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir_test.cpp:27:5: error: no matching function for call to 'fir'
    fir(x, y, a);
    ^~~
/ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir.h:4:6: note: candidate function not viable: requires 2 arguments, but 3 were provided
void fir(int in[N], int out[N]);
     ^
1 error generated.
slxcmd:0:0: warning: Non-zero exit code: 1 returned by 'INFO: [HLS 211-200] Compiling source code /ecel/UFAD/qlopezscarim/Desktop/lab3_vitis/fir3/fir_test.cpp as test bench code with instrumentation'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 7.12 seconds. Total CPU system time: 0.94 seconds. Total elapsed time: 9.45 seconds; peak allocated memory: 768.359 MB.
